<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

<!--    <LinearLayout-->
<!--        android:id="@+id/hintText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:background="?attr/selectableItemBackgroundBorderless"-->
<!--        android:gravity="center"-->
<!--        android:orientation="vertical"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0">-->

<!--    </LinearLayout>-->

    <ImageView
        android:id="@+id/image"
        android:layout_width="125dp"
        android:layout_height="136dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/no_face"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/date"
        android:layout_width="110dp"
        android:layout_height="21dp"
        android:text="@string/publication_date"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/plan"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_width="108dp"
        android:layout_height="23dp"
        android:text="@string/item_head"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/name"
        android:layout_width="109dp"
        android:layout_height="18dp"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="73dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/ic_pixeltrue_jogging" />

    <ImageButton
        android:id="@+id/heartButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="102dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/like_count"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_heart_white" />

    <TextView
        android:id="@+id/num2"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginEnd="12dp"
        android:text="@string/count_num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/like_count"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="112dp"
        android:text="@string/count_num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="89dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/like_count"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/comment"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>